--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,7 +10,6 @@
   padding-bottom: 32px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 @media screen and (max-width: 768px) {
@@ -31,7 +30,8 @@
 @media screen and (max-width: 320px) {
   .lead__title {
     max-width: 280px;
-    padding: 0 16px 16px;
+    margin: 0 16px 16px;
+    padding: 0;
     font-size: 40px;
     line-height: 44px;
   }
