--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -22,6 +22,6 @@
 @media screen and (max-width: 320px) {
   .lead {
     max-width: 320px;
-    padding: 0 2px 64px;
+    padding: 0 0 64px;
   }
 }
