--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
-.photo-grid__content {
+.photo-grid {
   max-width: 1184px;
-  padding: 0 48px 84px;
+  padding: 0 48px 92px;
   margin: 0;
   display: grid;
   grid-template-columns: repeat(4, minmax(220px, 284px));
@@ -11,7 +11,6 @@
 
 @media (max-width: 1024px) {
   .photo-grid {
-    padding-bottom: 80px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 14px;
@@ -20,7 +19,7 @@
 
 @media (max-width: 768px) {
   .photo-grid {
-    padding: 0 24px 70px;
+    padding: 0 24px 88px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
     gap: 16px;
