--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
   padding: 0;
   margin: 0;
-  padding-left: 18px;
+  padding: 18px 0 18px 0;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
